# brain-opt

./: .gitignore  Cargo.toml  README.md  Vagrantfile  rustfmt.toml
examples/: bubblesort_bytes.bf  cat.bf  print_ab.bf
src/: codegen.rs  compiler.rs  error.rs  instruction.rs  interpreter.rs  lib.rs  main.rs  optimizer.rs  parser.rs
src/target_abi/: linux.rs  macos.rs  mod.rs
tests/: integration.rs
