[package]
name = "brain_opt"
version = "0.1.0"
description = "Optimizing Brainfuck compiler"
authors = ["Hannes Karppila <hannes.karppila@gmail.com>"]
edition = "2018"

[dependencies]
strum = { git = "https://github.com/Peternator7/strum.git" }
strum_macros = { git = "https://github.com/Peternator7/strum.git" }
log = "0.4"
env_logger = "0.6.2"
tempfile = "3.1"
structopt = { version = "0.2.18" }

[dev-dependencies]
assert_cmd = "0.11.1"

[dev-dependencies.cargo-husky]
version = "1"
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]